--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  go_router: ^15.1.3
+  supabase_flutter: ^2.9.1
+  purchases_flutter: ^8.10.4
+  bloc: ^9.0.0
+  supabase_auth_ui: ^0.5.5
+  analyzer: ^7.5.2
+  intl: ^0.20.2
+  freezed: ^2.5.8
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +57,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
+  build_runner: ^2.5.4
+  json_serializable: ^6.9.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
