--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   freezed: ^2.5.8
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
