--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   json_annotation: ^4.9.0
   get_it: ^8.0.3
   flutter_dotenv: ^5.2.1
+  firebase_core: ^3.15.1
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
