--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.ketchsoft.ana.dev</string>
+	<string>com.ketch.app.ai.note.dev</string>
 	<key>PROJECT_ID</key>
 	<string>ai-note-app-ab9e9</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:181935596332:ios:a43e35674d5f05ab390289</string>
+	<string>1:181935596332:ios:ecc14a7a0491db18390289</string>
 </dict>
 </plist>
