--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,6 @@ dependencies:
   json_annotation: ^4.9.0
   get_it: ^8.0.3
   flutter_dotenv: ^5.2.1
-  firebase_core: ^3.15.1
-  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +62,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   build_runner: ^2.5.4
   json_serializable: ^6.9.5
+  change_app_package_name: ^1.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
