--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   get_it: ^8.0.3
   flutter_dotenv: ^5.2.1
   firebase_core: ^3.15.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
