--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   go_router: ^15.1.3
   supabase_flutter: ^2.9.1
   purchases_flutter: ^8.10.4
-  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
   supabase_auth_ui: ^0.5.5
   analyzer: ^7.5.2
   intl: ^0.20.2
@@ -49,8 +49,8 @@ dependencies:
   json_annotation: ^4.9.0
   get_it: ^8.0.3
   flutter_dotenv: ^5.2.1
-  firebase_core: ^3.15.1
   google_fonts: ^6.2.1
+  bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
