Feat: implement authentication flow with AuthBloc and LoginScreen; update routing and UI components

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,13 +44,13 @@ dependencies:
   supabase_auth_ui: ^0.5.5
   analyzer: ^7.5.2
   intl: ^0.20.2
-  freezed: ^2.5.8
-  freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   get_it: ^8.0.3
   flutter_dotenv: ^5.2.1
   google_fonts: ^6.2.1
   bloc: ^9.0.0
+  equatable: ^2.0.7
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
