--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Editor</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>com.googleusercontent.apps.181935596332-6cephn7e54ipcjroih96jbvjurr760ne</string>
+           <string>com.ketch.app.ai.note.dev</string>
+           <string>com.ketch.app.ai.note.dev://login-callback</string>
+        </array>
+      </dict>
+    </array>
 </dict>
 </plist>
