--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   bloc: ^9.0.0
   equatable: ^2.0.7
   google_sign_in: ^6.3.0
+  result_dart: ^2.1.1
 
 dev_dependencies:
   flutter_test:
