--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_sign_in: ^6.3.0
   result_dart: ^2.1.1
   rxdart: ^0.28.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
