--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   equatable: ^2.0.7
   google_sign_in: ^6.3.0
   result_dart: ^2.1.1
+  rxdart: ^0.28.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
