--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   result_dart: ^2.1.1
   rxdart: ^0.28.0
   collection: ^1.19.1
+  flutter_linkify: ^6.0.0
 
 dev_dependencies:
   flutter_test:
