--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   rxdart: ^0.28.0
   collection: ^1.19.1
   flutter_linkify: ^6.0.0
+  file_picker: ^10.2.0
 
 dev_dependencies:
   flutter_test:
