Feature: implement file note creation with upload functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   collection: ^1.19.1
   flutter_linkify: ^6.0.0
   file_picker: ^10.2.0
+  dio: ^5.8.0+1
+  uni_storage: ^0.0.4
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
