--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   dio: ^5.8.0+1
   uni_storage: ^0.0.4
   mime: ^2.0.0
+  flutter_sound: ^9.28.0
+  permission_handler: ^12.0.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
